# smart-monitoring-neonatal-vital-support

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
database/: docker-compose.yml
database/alembic/versions/: 90964fb94286_create_patients_table.py  99d6ee248850_insert_dummy_data_into_patients_table.py  b7dc9ef02381_create_materialised_view_of_vital_sign_.py  c56289b52385_create_vital_signs_table.py
kafka-connect-plugins/confluentinc-kafka-connect-avro-converter-8.0.0/: manifest.json
kafka-connect-plugins/confluentinc-kafka-connect-avro-converter-8.0.0/doc/: README.md
kafka-connect-plugins/confluentinc-kafka-connect-jdbc-10.8.4/: manifest.json
kafka-connect-plugins/confluentinc-kafka-connect-jdbc-10.8.4/doc/: README.md  licenses.html
kafka-connect-plugins/confluentinc-kafka-connect-jdbc-10.8.4/doc/licenses/: LICENSE-ojdbc8-19.7.0.0.txt
src/kafka/connectors/: deploy-connector.sh
src/kafka/connectors/sinks/: postgres-sink.json
src/kafka/connectors/sources/: debezium-source.json
src/kafka/producers/: vital_signs_producer.py
src/kafka/schemas/: vital_signs.avsc
src/kafka/sink/: create-kafka-topic.sh  postgres-sink.properties
src/schemas/: vital_sign_schema.py
src/utils/: vital_signs_simulator.py
tests/utils/: test_vital_signs_simulator.py
